Try to fix css issue on iphones.

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -32,6 +32,10 @@
     border: 1px solid #f2f2f2;
     background-color: white;
     width: 100%;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0px;
+    border-radius: 0;
+    color: #666;
 }
 
 .instantSearchResult {
